[package]
name = "bevy-anno"
version = "0.1.0"
edition = "2021"
exclude = ["dist", "build", "assets", "credits"]

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

[features]
dev = ["bevy/dynamic"]

[dependencies]
bevy = { version = "=0.8.1" }
bevy-inspector-egui = "=0.13.0"
bevy_ecs_tilemap = { git = "https://github.com/StarArawn/bevy_ecs_tilemap", branch = "main" }
rand = "=0.8.5"
bevy_asset_loader = { version = "0.13", features = ["stageless"] }
iyes_loopless = "=0.8.0"
iyes_progress = "=0.6.0"
pathfinding = "3.0.14"
bevy_prototype_debug_lines = "0.8.1"
